[package]
name = "lumina-core"
version = "0.1.0"
edition = "2024"

[dependencies]
viviscript-core = {path = "../viviscript-core"}
serde = { version = "1.0.219", features = ["derive"] }
mlua = {version = "0.11.5",  features = ["lua54", "vendored"]}
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
ratatui = "0.29.0"
log = "0.4.29"
once_cell = "1.21.3"
toml = "0.9.2"
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = {version = "0.7.0", features = ["html_reports"]}

[[bench]]
name = "executor_bench"
harness = false
