[package]
name = "lumina-desktop"
version = "0.1.0"
edition = "2024"

[features]
default = ["skia"]
tui = ["lumina-core/tui"]
skia = ["dep:lumina-skia-renderer"]

[dependencies]
lumina-core = {path = "../lumina-core"}
log = "0.4.29"
env_logger = "0.11.8"
lumina-shared = {path = "../lumina-shared"}
lumina-skia-renderer = { path = "../lumina-skia-renderer", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"