[package]
name = "lumina-skia-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.12"
skia-safe = {version = "0.87.0", features = ["vulkan", "gpu"]}
vulkano = "0.35.2"
log = "0.4.27"
anyhow = "1.0.99"
ash = { version = "0.38.0+1.3.281", features = ["linked"] }
lumina-core = { path = "../lumina-core" }