[package]
name = "lumina-skia-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.12"
skia-safe = {version = "0.91.0", features = ["vulkan", "gpu", "textlayout"]}
vulkano = "0.35.2"
log = "0.4.29"
ash = { version = "0.38.0+1.3.281", features = ["linked"] }
lumina-core = { path = "../lumina-core" }
viviscript-core = {path = "../viviscript-core"}
walkdir = "2.5.0"